_config.yml: updated label in nav_links

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ header:
     - label: Home
       url: /
       style: link
-    - label: Portfolio
+    - label: People
       url: /portfolio/
       style: link
     - label: Blog
