_config.yml: updated title in header

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: Plio-Pleistocene food webs webs of the Turkana Basin
 color_scheme: light
 accent_color: pink
 header:
-  title: Exto
+  title: Turkana Foodwebs
   has_nav: true
   nav_links:
     - label: Home
