--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ collections:
   posts:
     permalink: '/posts/:title/'
 description: Plio-Pleistocene food webs webs of the Turkana Basin
-color_scheme: light
+color_scheme: dark
 accent_color: pink
 header:
   title: Turkana Foodwebs
